--- a/src/main/resources/templates/forms/login-form.html
+++ b/src/main/resources/templates/forms/login-form.html
@@ -19,7 +19,7 @@
         <div class="menu">
           <ul class="d-flex align-items-center md:justify-center bg-green py-3">
             <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
            
             <li>
               <a class="dropdown-item" href="/new-point"
@@ -42,10 +42,10 @@
             <div class="md:text-4xl text-2xl mb-5 text-center">Авторизация</div>
             <div class="form-row my-2">
                   <!-- паттерн можно убрать , это для пафоса жесткого, в cлуаче pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,7}$" он для email, можно поставить на любую длинну pattern="^.{1,150}$"-->
-                <input class="w-full block" type="text" name="userLoginForm" id="userLoginForm" required
+                <input class="w-full block" type="text" name="userLoginForm" id="userLoginForm" required placeholder="Логин"
                 
                 >
-                <label for="userLoginForm">Логин</label>
+<!--                <label for="userLoginForm">Логин</label>-->
             </div>
             <div class="form-row mt-4">
                 <input class="w-full block" type="password" name="userPasswordForm" id="userPasswordForm" required>
