--- a/src/main/resources/templates/forms/reject-point-worker.html
+++ b/src/main/resources/templates/forms/reject-point-worker.html
@@ -19,7 +19,7 @@
         <div class="menu">
           <ul class="d-flex align-items-center md:justify-center bg-green py-3">
             <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
             <li>
               <a class="dropdown-item" href="/registration">Регистрация</a>
             </li>
@@ -49,21 +49,13 @@
                 <input class="w-full block" type="text" name="rejectPointWorker" id="rejectPointWorker" required>
                 <label for="rejectPointWorker"> ФИО работника</label>
             </div>
-            <!-- <div class="form-row mt-4">
-                <input class="w-full block" type="password" name="userPasswordForm" id="userPasswordForm" required>
-                <label for="userLoginForm">Пароль</label>
-            </div> -->
-            <!-- <div class="form-row mt-4">
-                <textarea class="w-full block" required pattern=""></textarea>
-                <label for="userLoginForm">Эта textarea просто для примера, убрать если не нужна</label>
-            </div> -->
             <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
                 <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-green mb-1 md:!mb-0 text-white text-md md:text-md md:me-1" >Сохранить</button>
                 <a class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center rounded-xl mt-1 md:!mt-0 bg-green text-white text-md md:text-md md:ml-1" href="/account">Назад</a>
 
             </div>
         </form>
-    </div>
+    </div><div class="g-spacer my-20"></div>
     <script src="/rejectPointWorker.js"></script>
 </body>
 </html>
