--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
 
       </div>
 
-
+    <div class="g-spacer my-20"></div>
 <script src="/main.js"></script>
 <script src="/header.js"></script>
 </body>
