--- a/src/main/resources/templates/lk/admin-user-role-change.html
+++ b/src/main/resources/templates/lk/admin-user-role-change.html
@@ -47,6 +47,7 @@
         </div>
     </div>
 </div>
+<div class="g-spacer my-20"></div>
 <script src="/change_role_by_admin.js"></script>
 </body>
 </html>
