--- a/src/main/resources/templates/lk/card-page-admin/card-from-user.html
+++ b/src/main/resources/templates/lk/card-page-admin/card-from-user.html
@@ -19,7 +19,7 @@
         <div class="menu">
             <ul class="d-flex align-items-center md:justify-center bg-green py-3">
                 <li><a class="dropdown-item" href="/">Главная</a></li>
-                <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+                <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
                 <li>
                     <a class="dropdown-item" href="/new-point"
                     >Добавить новую точку</a
@@ -105,6 +105,7 @@
     </div>
 </div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
+<div class="g-spacer my-20"></div>
 <script src="/admin-point-card-from-user.js"></script>
 </body>
 </html>
