--- a/src/main/resources/templates/lk/card-page-user/index-rejected.html
+++ b/src/main/resources/templates/lk/card-page-user/index-rejected.html
@@ -19,7 +19,7 @@
         <div class="menu">
             <ul class="d-flex align-items-center md:justify-center bg-green py-3">
                 <li><a class="dropdown-item" href="/">Главная</a></li>
-                <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+                <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
                 <li>
                     <a class="dropdown-item" href="/new-point"
                     >Добавить новую точку</a
@@ -108,6 +108,7 @@
     <!-- КОНЕЦ ЗАГРУЗКИ ФОТОГРАФИИ  -->
 
 </div>
+<div class="g-spacer my-20"></div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
 <script src="/main.js"></script>
 </body>
