--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -59,9 +59,9 @@
     <div
             class="container-md max-h-[500px] my-3 px-0 md:my-10 overflow-scroll md:overflow-auto table-wrapper"
     >
-      <div class="table-custom  w-[700px] md:w-full">
+      <div class="table-custom w-full">
         <div class="table-header bg-gray px-2 py-1">
-          <div id="pointName" class="inline-block w-10/12 font-medium">
+          <div id="pointName" class="inline-block w-2/3 md:w-10/12 font-medium">
             Название
           </div>
           <div id="pointStatus" class="inline-block py-1 px-3 font-medium">
