--- a/src/main/resources/templates/forms/change-password-form.html
+++ b/src/main/resources/templates/forms/change-password-form.html
@@ -19,7 +19,7 @@
         <div class="menu">
           <ul class="d-flex align-items-center md:justify-center bg-green py-3">
             <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
            
             <li>
               <a class="dropdown-item" href="/new-point"
@@ -70,6 +70,7 @@
             </div>
         </form>
     </div>
+    <div class="g-spacer my-20"></div>
     <script src="/changeUserPassword.js"></script>
 </body>
 </html>
