--- a/src/main/resources/templates/forms/reject-point-user.html
+++ b/src/main/resources/templates/forms/reject-point-user.html
@@ -20,7 +20,7 @@
         <div class="menu">
           <ul class="d-flex align-items-center md:justify-center bg-green py-3">
             <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
             <li>
               <a class="dropdown-item" href="/registration">Регистрация</a>
             </li>
@@ -65,6 +65,7 @@
             </div>
         </form>
     </div>
+    <div class="g-spacer my-20"></div>
     <script src="/rejectPointUser.js"></script>
 </body>
 </html>
