--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -16,7 +16,7 @@
         <div class="menu">
             <ul class="d-flex align-items-center md:justify-center bg-green py-3">
                 <li><a class="dropdown-item" href="/">Главная</a></li>
-                <li><a class="dropdown-item" href="/lk">Личный кабинет</a></li>
+                <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
                 <li>
                     <a class="dropdown-item" href="/new-point"
                     >Добавить новую точку</a
@@ -35,7 +35,7 @@
 <div id="map">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=cde97d8a-7675-4dd5-90c2-f7ee6e1eaec6&lang=ru_RU" type="text/javascript"></script>
 </div>
-
+<div class="g-spacer my-20"></div>
 <script src="/map_full.js"></script>
 </body>
 </html>
