--- a/src/main/resources/templates/forms/change-password-form.html
+++ b/src/main/resources/templates/forms/change-password-form.html
@@ -13,30 +13,23 @@
     <title>Личный кабинет</title>
   </head>
   <body>
-    <!-- НАЧАЛО МЕНЮ -->
-    <header class="bg-green overflow-scroll">
-      <div class="container-md">
-        <div class="menu">
-          <ul class="d-flex align-items-center md:justify-center bg-green py-3">
-            <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
-           
-            <li>
-              <a class="dropdown-item" href="/new-point"
-                >Добавить новую точку</a
-              >
-            </li>
-            <li><a class="dropdown-item" href="/map">Карта</a></li>
-            <li id="profileImg">
-              <a class="dropdown-item" href="/profile"
-                ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
-              /></a>
-            </li>
-          </ul>
-        </div>
+  <!-- НАЧАЛО МЕНЮ -->
+  <header class="bg-green overflow-scroll ">
+    <div class="container-md">
+      <div class="menu">
+        <ul class=" d-flex align-items-center xl:justify-center bg-green py-3">
+          <li><a class="dropdown-item " href="/">Главная</a></li>
+          <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
+          <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
+          <li><a class="dropdown-item" href="/map">Карта</a></li>
+          <li id="profileImg"><a class="dropdown-item" href="/account">
+            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+          </li>
+        </ul>
       </div>
-    </header>
-    <!--КОНЕЦ МЕНЮ -->
+    </div>
+  </header>
+  <!--КОНЕЦ МЕНЮ -->
     <div class="container-md my-1.5 md:my-10 ">
         <form id="saveChangedUserPassword" method="post" class="login-form md:w-2/3 xl:w-1/2 md:max-w-[600px] w-full mx-auto md:my-10 my-3" enctype="application/x-www-form-urlencoded">
           <div class="relative form-title-wrapper mb-5 flex text-left align-items-center">
@@ -72,5 +65,6 @@
     </div>
     <div class="g-spacer my-20"></div>
     <script src="/changeUserPassword.js"></script>
+    <script src="/header.js"></script>
 </body>
 </html>
