--- a/src/main/resources/templates/lk/card-page-admin/card-from-worker.html
+++ b/src/main/resources/templates/lk/card-page-admin/card-from-worker.html
@@ -14,22 +14,16 @@
 </head>
 <body>
 <!-- НАЧАЛО МЕНЮ -->
-<header class="bg-green overflow-scroll">
+<header class="bg-green overflow-scroll ">
     <div class="container-md">
         <div class="menu">
-            <ul class="d-flex align-items-center md:justify-center bg-green py-3">
-                <li><a class="dropdown-item" href="/">Главная</a></li>
+            <ul class=" d-flex align-items-center xl:justify-center bg-green py-3">
+                <li><a class="dropdown-item " href="/">Главная</a></li>
                 <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
-                <li>
-                    <a class="dropdown-item" href="/new-point"
-                    >Добавить новую точку</a
-                    >
-                </li>
+                <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
-                <li id="profileImg">
-                    <a class="dropdown-item" href="/profile"
-                    ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
-                    /></a>
+                <li id="profileImg"><a class="dropdown-item" href="/account">
+                    <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
                 </li>
             </ul>
         </div>
@@ -141,5 +135,6 @@
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
 <div class="g-spacer my-20"></div>
 <script src="/admin-point-card-from-worker.js"></script>
+<script src="/header.js"></script>
 </body>
 </html>
