--- a/src/main/resources/templates/lk/card-page-worker/point-closed.html
+++ b/src/main/resources/templates/lk/card-page-worker/point-closed.html
@@ -14,22 +14,16 @@
 </head>
 <body>
 <!-- НАЧАЛО МЕНЮ -->
-<header class="bg-green overflow-scroll">
+<header class="bg-green overflow-scroll ">
     <div class="container-md">
         <div class="menu">
-            <ul class="d-flex align-items-center md:justify-center bg-green py-3">
-                <li><a class="dropdown-item" href="/">Главная</a></li>
+            <ul class=" d-flex align-items-center xl:justify-center bg-green py-3">
+                <li><a class="dropdown-item " href="/">Главная</a></li>
                 <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
-                <li>
-                    <a class="dropdown-item" href="/new-point"
-                    >Добавить новую точку</a
-                    >
-                </li>
+                <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
-                <li id="profileImg">
-                    <a class="dropdown-item" href="/profile"
-                    ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
-                    /></a>
+                <li id="profileImg"><a class="dropdown-item" href="/account">
+                    <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
                 </li>
             </ul>
         </div>
@@ -65,21 +59,6 @@
                 <!-- НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ -->
             </div>
         </div>
-        <!-- КОНЕЦ ЛЕВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
-
-        <!--        &lt;!&ndash; НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
-        <!--        <div class="central-side flex flex-col flex md:w-3/12 w-full">-->
-        <!--            <div class="card-text mt-3">-->
-        <!--                <label for="card_name block">Дата открытия</label>-->
-        <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
-        <!--                <span class="my-1 block w-full message-no-input">19.04.2002</span>-->
-
-        <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--        &lt;!&ndash; КОНЕЦ СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
-
-        <!-- НАЧАЛО ПРАВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
         <div class="left-side flex offset-md-4 justify-content-end flex-col md:w-3/12 w-full">
             <div class="card-text mt-3 card-status">
                 <label for="card_name block">Статус</label>
@@ -137,5 +116,6 @@
 <div class="g-spacer my-20"></div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
 <script src="/main.js"></script>
+<script src="/header.js"></script>
 </body>
 </html>
