--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -14,29 +14,23 @@
     <title>Личный кабинет</title>
   </head>
   <body>
-    <!-- НАЧАЛО МЕНЮ -->
-    <header class="bg-green overflow-scroll">
-      <div class="container-md">
-        <div class="menu">
-          <ul class="d-flex align-items-center md:justify-center bg-green py-3">
-            <li><a class="dropdown-item" href="/">Главная</a></li>
-            <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
-            <li>
-              <a class="dropdown-item" href="/new-point"
-                >Добавить новую точку</a
-              >
-            </li>
-            <li><a class="dropdown-item" href="/map">Карта</a></li>
-            <li id="profileImg">
-              <a class="dropdown-item" href="/profile"
-                ><img src="/img/account_circle.svg" id="userAvatarMenu" alt=""
-              /></a>
-            </li>
-          </ul>
-        </div>
+  <!-- НАЧАЛО МЕНЮ -->
+  <header class="bg-green overflow-scroll ">
+    <div class="container-md">
+      <div class="menu">
+        <ul class=" d-flex align-items-center xl:justify-center bg-green py-3">
+          <li><a class="dropdown-item " href="/">Главная</a></li>
+          <li><a class="dropdown-item" href="/account">Личный кабинет</a></li>
+          <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
+          <li><a class="dropdown-item" href="/map">Карта</a></li>
+          <li id="profileImg"><a class="dropdown-item" href="/account">
+            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+          </li>
+        </ul>
       </div>
-    </header>
-    <!--КОНЕЦ МЕНЮ -->
+    </div>
+  </header>
+  <!--КОНЕЦ МЕНЮ -->
   <!-- НАЧАЛО ЛК -->
     <div class="container-md my-3 md:my-10">
         <form class="form-change-photo" method="post" enctype="multipart/form-data">
@@ -101,5 +95,6 @@
     </div>
     <!-- КОНЕЦ ТАБЛИЦЫ -->
     <script src="/main.js"></script>
+    <script src="/header.js"></script>
   </body>
 </html>
