--- a/src/main/resources/templates/lk/card-page-admin/card-from-user.html
+++ b/src/main/resources/templates/lk/card-page-admin/card-from-user.html
@@ -23,7 +23,7 @@
                 <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
                 <li id="profileImg"><a class="dropdown-item" href="/account">
-                    <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+                    <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square" alt=""></a>
                 </li>
             </ul>
         </div>
@@ -94,8 +94,12 @@
     <!-- КОНЕЦ ОДИНАРНОЙ ФОТОГРАФИИ  -->
     <!-- КОНЕЦ ЗАГРУЗКИ ФОТОГРАФИИ  -->
     <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
-        <a class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-red text-white mb-1 md:!mb-0 text-md md:text-md md:me-1" id="reject-point-user">Отклонить</a>
-        <a class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center mt-1 md:!mt-0 rounded-xl  bg-green text-white text-md md:text-md md:ml-2 " id="aprove-point-user">Верифицировать</a>
+        <a class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1
+        md:mx-auto bg-red text-white mb-1 md:!mb-0 text-md md:text-md md:me-1"
+           id="reject-point-user">Отклонить</a>
+        <a class="flex align-items-center justify-center px-1 py-2 md:!py-1
+        md:w-1/2 text-center mt-1 md:!mt-0 rounded-xl  bg-green text-white text-md md:text-md md:ml-2 "
+           id="aprove-point-user">Верифицировать</a>
     </div>
 </div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
@@ -104,3 +108,4 @@
 <script src="/header.js"></script>
 </body>
 </html>
+
