--- a/src/main/resources/templates/lk/card-page-worker/close-point.html
+++ b/src/main/resources/templates/lk/card-page-worker/close-point.html
@@ -23,7 +23,7 @@
                   <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                   <li><a class="dropdown-item" href="/map">Карта</a></li>
                   <li id="profileImg"><a class="dropdown-item" href="/account">
-                      <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+                      <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square" alt=""></a>
                   </li>
               </ul>
           </div>
@@ -108,7 +108,8 @@
               <span class=" input-file-btn my-2 block">Выбрать фото</span>
               <!-- <span class="input-file-text">Максимум 10мб</span> -->
             </label>
-            <button class="w-full  d-block text-center rounded-md py-3 px-5 my-1 bg-red text-white text-xl md:text-xl" id="uploadPhotoFromWorker">Закрыть точку</button>
+            <button class="w-full  d-block text-center rounded-md py-3 px-5 my-1 bg-red text-white text-xl md:text-xl"
+                    id="uploadPhotoFromWorker">Закрыть точку</button>
           </form>
 
                
@@ -123,3 +124,5 @@
 <script src="/header.js"></script>
 </body>
 </html>
+
+
