--- a/src/main/resources/templates/lk/index-user.html
+++ b/src/main/resources/templates/lk/index-user.html
@@ -24,7 +24,7 @@
           <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
           <li><a class="dropdown-item" href="/map">Карта</a></li>
           <li id="profileImg"><a class="dropdown-item" href="/account">
-            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square" alt=""></a>
           </li>
         </ul>
       </div>
@@ -37,7 +37,6 @@
             <label class="input-file">
                 <input type="file" name="file">
                 <img class="input-file-btn" src="/img/account_circle.svg"/>
-                <!-- <span class="input-file-text">Максимум 10мб</span> -->
              </label>
         </form>
       <div class="change-name-wrapper text-center my-2">
@@ -48,7 +47,6 @@
       </div>
     </div>
    <!-- КОНЕЦ ЛК -->
-
     <!-- НАЧАЛО ТАБЛИЦЫ -->
     <div
             class="container-md max-h-[500px] my-3 px-0 md:my-10 overflow-scroll md:overflow-auto table-wrapper"
@@ -65,8 +63,6 @@
         <a href="/point-card" class="no-underline w-full">
           <div class="table-row-custom flex align-items-center px-2 py-1">
             <div id="pointName" class="w-full font-light px-2 no-underline">
-              Точка Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Repellat, mollitia.
             </div>
             <div id="pointStatusRow" class="py-1 px-3 text-center no-underline">
               Закрыта
@@ -76,19 +72,10 @@
         <a href="/card-page" class="no-underline w-full">
           <div class="table-row-custom flex align-items-center px-2 py-1">
             <div id="pointName" class="w-full font-light px-2 no-underline">
-              Точка Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Repellat, mollitia.
             </div>
-            <a
-                    href="/action"
-                    class=""
-            ><div
-                    id="pointStatusRow"
-                    class="py-1 px-3 text-center no-underline text-red"
-            >
+            <a href="/action" class=""><div id="pointStatusRow" class="py-1 px-3 text-center no-underline text-red">
               Открыта
-            </div></a
-            >
+            </div></a>
           </div>
         </a>
       </div>
@@ -98,3 +85,5 @@
     <script src="/header.js"></script>
   </body>
 </html>
+
+
