--- a/src/main/resources/templates/forms/add-new-point.html
+++ b/src/main/resources/templates/forms/add-new-point.html
@@ -23,7 +23,7 @@
         <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
         <li><a class="dropdown-item" href="/map">Карта</a></li>
         <li id="profileImg"><a class="dropdown-item" href="/account">
-          <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+          <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square" alt=""></a>
         </li>
       </ul>
     </div>
@@ -58,17 +58,17 @@
 
         <div class="form-row mt-4">
           <input class="w-full block " type="file" name="pointCardFile" id="pointCardFile" required>
-          <label for="pointCardFile" class="bg-green !static py-11 !flex text-white align-items-center justify-center text-center rounded-md text-xl">Выбрать файл</label>
+          <label for="pointCardFile" class="bg-green !static py-11 !flex text-white align-items-center
+          justify-center text-center rounded-md text-xl">Выбрать файл</label>
         </div>
         <div class="form-row mt-4">
-          <!-- паттерн можно убрать, в cлуаче pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,7}$" он для email, можно поставить на любую длинну pattern="^.{1,150}$"-->
           <input class="w-full block" type="text" name="pointCardCoordinates" id="pointCardCoordinates">
           <label for="pointCardCoordinates">Координаты</label>
         </div>
       </div>
     </div>
-    <button class="mt-4 block w-full text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-green text-white text-xl md:text-xl xl:mb-0 mb-20" id="addPoint">Добавить точку</button>
-
+    <button class="mt-4 block w-full text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-green text-white text-xl
+    md:text-xl xl:mb-0 mb-20" id="addPoint">Добавить точку</button>
   </form>
 </div>
 <div class="g-spacer my-20"></div>
@@ -76,3 +76,7 @@
 <script src="/header.js"></script>
 </body>
 </html>
+
+
+
+
