--- a/src/main/resources/templates/forms/change-password-form.html
+++ b/src/main/resources/templates/forms/change-password-form.html
@@ -23,7 +23,7 @@
           <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
           <li><a class="dropdown-item" href="/map">Карта</a></li>
           <li id="profileImg"><a class="dropdown-item" href="/account">
-            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square" alt=""></a>
           </li>
         </ul>
       </div>
@@ -31,35 +31,33 @@
   </header>
   <!--КОНЕЦ МЕНЮ -->
     <div class="container-md my-1.5 md:my-10 ">
-        <form id="saveChangedUserPassword" method="post" class="login-form md:w-2/3 xl:w-1/2 md:max-w-[600px] w-full mx-auto md:my-10 my-3" enctype="application/x-www-form-urlencoded">
+        <form id="saveChangedUserPassword" method="post" class="login-form md:w-2/3 xl:w-1/2
+        md:max-w-[600px] w-full mx-auto md:my-10 my-3" enctype="application/x-www-form-urlencoded">
           <div class="relative form-title-wrapper mb-5 flex text-left align-items-center">
             <div class="md:text-4xl text-2xl w-2/3">Ваши данные</div>
-            <label class="!static  dropdown-item input-file w-1/3 focus:bg-white focus-within:bg-white focus-visible:bg-white !rounded-[50%] justify-end">
+            <label class="!static  dropdown-item input-file w-1/3 focus:bg-white
+            focus-within:bg-white focus-visible:bg-white !rounded-[50%] justify-end">
               <input type="file" name="file" />
               <img class="w-full aspect-square !rounded-[50%]" id="userPhoto" src="/img/imgae.png" alt=""/>
-              <!-- <span class="input-file-text">Максимум 10мб</span> -->
             </label>
-            <!-- <a class="dropdown-item w-1/3 flex justify-end" href="/profile"
-            ></a> -->
+            ></a>
           </div>
             <div class="form-row my-2">
-                  <!-- паттерн можно убрать  , в cлуаче pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,7}$" он для email, можно поставить на любую длинну pattern="^.{1,150}$"-->
                 <input class="w-full block" type="text" name="userLoginForm" id="userLoginForm" disabled>
                 <label for="userLoginForm"></label>
             </div>
             <div class="form-row mt-4">
-                <!-- паттерн можно убрать  , в cлуаче pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,7}$" он для email, можно поставить на любую длинну pattern="^.{1,150}$"-->
                 <input class="w-full block" type="password" name="userFirstPassword" id="userFirstPassword" required>
                 <label for="userFirstPassword">Придумайте пароль</label>
             </div>
             <div class="form-row mt-4">
-                <!-- паттерн можно убрать  , в cлуаче pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,7}$" он для email, можно поставить на любую длинну pattern="^.{1,150}$"-->
                 <input class="w-full block" type="password" name="userSecondPassword" id="userSecondPassword" required>
                 <label for="userSecondPassword">Введите пароль еще раз</label>
             </div>
        
             <div class="mt-2 button-row flex flex-col md:flex-row mt-5">                
-                <button class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center rounded-xl md:mx-auto bg-green text-white text-md md:text-md mt-1 md:!mt-0  md:ml-2" >Сохранить изменения</button>
+                <button class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center rounded-xl
+                md:mx-auto bg-green text-white text-md md:text-md mt-1 md:!mt-0  md:ml-2" >Сохранить изменения</button>
             </div>
         </form>
     </div>
@@ -68,3 +66,4 @@
     <script src="/header.js"></script>
 </body>
 </html>
+
