--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,6 @@
       }
     </style>
      <link rel="stylesheet" href="/style.css" />
-
     <title>Приложение</title>
 </head>
 <body>
@@ -31,41 +30,34 @@
                         <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                         <li><a class="dropdown-item" href="/map">Карта</a></li>
                         <li id="profileImg"><a class="dropdown-item" href="/account">
-                            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+                            <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"alt=""></a>
                         </li>
                     </ul>
                 </div>
         </div>
     </header>
     <!--КОНЕЦ МЕНЮ -->
-
-
     <div class="container-md  my-3 md:my-10">
-
           <div class="text-headers mx-3 flex flex-col justify-between">
             <h1 class="text-4xl font-semibold mr-2 ">Кто мы?</h1>
             <h2 class="text-2xl font-medium  my-1 w-6/12"> Мы - самый успешный стартап на диком западе</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque repudiandae reprehenderit labore est saepe molestiae dicta nisi fugit, quam quod a minus. Illo, debitis quidem! Similique expedita error cum totam.  
+            <p>
             </p>
-
             <div class="text-wrapper  flex flex-col md:flex-row justify-between mt-2 ">
-            <a class="md:w-full text-center rounded-md py-3 px-5 my-1 md:my-0 md:me-2 bg-green d-block text-white text-xl md:text-xl" href="/registration">Зарегистроваться</a>
+            <a class="md:w-full text-center rounded-md py-3 px-5 my-1 md:my-0 md:me-2 bg-green d-block text-white text-xl md:text-xl"
+               href="/registration">Зарегистроваться</a>
         
-            <a class="md:w-full  d-block text-center rounded-md py-3 px-5 my-1 md:my-0 md:ml-2 bg-green text-white text-xl md:text-xl" href="/login/index">Авторизоваться</a>
+            <a class="md:w-full  d-block text-center rounded-md py-3 px-5 my-1 md:my-0 md:ml-2 bg-green text-white text-xl md:text-xl"
+               href="/login/index">Авторизоваться</a>
           </div>
-            
         </div>
-        <div id="map">
-<!--            <iframe width="100%" height="400px" src="https://yandex.ru/map-widget/v1/?um=constructor%3Aede39a4da56ff7561150eac567b6566f8f135eb133ae804ed6a571321b0efcda&amp;source=constructor"></iframe>-->
-            <script src="https://api-maps.yandex.ru/2.1/?apikey=cde97d8a-7675-4dd5-90c2-f7ee6e1eaec6&lang=ru_RU" type="text/javascript"></script>
-<!--            <script src="/mapbasics.js"></script>-->
-        </div>
-        <a class="ml-3 d-block  md:w-1/2 text-center rounded-md py-3 px-5 md:mx-auto bg-green text-white text-xl md:text-xl" href="/new-point">Добавить новую точку</a>
-
+        <div id="map"></div>
+        <a class="ml-3 d-block  md:w-1/2 text-center rounded-md py-3 px-5 md:mx-auto bg-green text-white text-xl md:text-xl"
+           href="/new-point">Добавить новую точку</a>
       </div>
-
     <div class="g-spacer my-20"></div>
 <script src="/main.js"></script>
 <script src="/header.js"></script>
 </body>
 </html>
+
