--- a/src/main/resources/templates/lk/card-page-admin/card-from-worker.html
+++ b/src/main/resources/templates/lk/card-page-admin/card-from-worker.html
@@ -23,7 +23,7 @@
                 <li><a class="dropdown-item" href="/new-point">Добавить новую точку</a></li>
                 <li><a class="dropdown-item" href="/map">Карта</a></li>
                 <li id="profileImg"><a class="dropdown-item" href="/account">
-                    <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square"                                 alt=""></a>
+                    <img src="/img/account_circle.svg" id="userAvatarMenu" class="aspect-square" alt=""></a>
                 </li>
             </ul>
         </div>
@@ -60,18 +60,6 @@
             </div>
         </div>
         <!-- КОНЕЦ ЛЕВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
-
-        <!--        &lt;!&ndash; НАЧАЛО СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
-        <!--        <div class="central-side flex flex-col flex md:w-3/12 w-full">-->
-        <!--            <div class="card-text mt-3">-->
-        <!--                <label for="card_name block">Дата открытия</label>-->
-        <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
-        <!--                <span class="my-1 block w-full message-no-input">19.04.2002</span>-->
-
-        <!--                &lt;!&ndash; НАЧАЛО ПОЛЯ БЕЗ ВВОДА ДАННЫХ В КРАТОЧКЕ ТОЧКИ &ndash;&gt;-->
-        <!--            </div>-->
-        <!--        </div>-->
-        <!--        &lt;!&ndash; КОНЕЦ СРЕДНЕЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ &ndash;&gt;-->
 
         <!-- НАЧАЛО ПРАВОЙ СЕКЦИИ ИНФОРМАЦИИ О КАРТОЧКЕ ТОЧКИ -->
         <div class="left-side flex offset-md-4 justify-content-end flex-col md:w-3/12 w-full">
@@ -128,8 +116,12 @@
     <!-- КОНЕЦ ЗАГРУЗКИ ФОТОГРАФИИ  -->
 
     <div class="mt-2 button-row flex flex-col md:flex-row mt-4  ">
-        <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1 md:mx-auto bg-red text-white mb-1 md:!mb-0 text-md md:text-md md:me-1" id="reject-point-worker">Отклонить</button>
-        <button class="flex align-items-center justify-center px-1 py-2 md:!py-1  md:w-1/2 text-center mt-1 md:!mt-0 rounded-xl  bg-green text-white text-md md:text-md md:ml-2 " id="aprove-point-worker">Верифицировать</button>
+        <button class="md:!mt-0 block md:w-1/2 text-center rounded-xl py-2 md:!py-1
+        md:mx-auto bg-red text-white mb-1 md:!mb-0 text-md md:text-md md:me-1"
+                id="reject-point-worker">Отклонить</button>
+        <button class="flex align-items-center justify-center px-1 py-2 md:!py-1
+        md:w-1/2 text-center mt-1 md:!mt-0 rounded-xl  bg-green text-white text-md md:text-md md:ml-2 "
+                id="aprove-point-worker">Верифицировать</button>
     </div>
 </div>
 <!-- КОНЕЦ КАРТОЧКИ ТОЧКИ  C ВВОДОМ ДАННЫХ-->
@@ -138,3 +130,6 @@
 <script src="/header.js"></script>
 </body>
 </html>
+
+
+
